# glaucoma-vf-ml

./: .gitignore  Apptainer.def  README.md  coords.txt  makefile  pyproject.toml  test_output.txt
assets/: grape_master_lookup_61.npy  grape_training_mask_61.npy  grape_vf_report_coords.txt  grape_vf_report_coords_degrees.txt
cli/: main.py
configs/grape/: test.yaml  train.yaml
configs/hvf_system/: test.yaml  train.yaml
configs/test/: hvf_classifier.yaml
configs/train/: hvf_classifier.yaml  hvf_system.yaml
docs/: task1_classifier.md  task1_hvf_classifier.md  task1_hvf_system.md
logs/grape/v_20260427_123945/: config.yaml
logs/grape/v_20260427_123945/test_results/: results.txt
logs/hvf_system/v_20260412_155009/test_results/: results.txt
notebooks/: GRAPE.ipynb  UWHVF.ipynb  data_exploration.ipynb
notes/: model.md
scripts/: convert_grape_vf_coords.py  get_grape_vf_coords.py  master_lookup_grape_vf_coords.py  setup_data.py  test.sh  train.sh
src/glaucoma_vf/: callbacks.py  data_utils.py  datamodule.py  dataset.py  enums.py  utils.py
src/glaucoma_vf/callbacks/: grape_logger.py  uwhvf_logger.py
src/glaucoma_vf/data/: data_utils.py
src/glaucoma_vf/data/grape/: datamodule.py  dataset.py
src/glaucoma_vf/data/uwhvf/: datamodule.py  dataset.py
src/glaucoma_vf/loss/: perceptual_loss.py
src/glaucoma_vf/models/: dummy_grape_vf_model.py  grape_efficient_net.py  grape_gen_vit.py  grape_hyb_vit.py  hvf_cnn.py  hvf_cnn_backbone.py  hvf_cnn_classifier.py
src/glaucoma_vf/plot/: grape_plot.py  plot_hvf.py
src/glaucoma_vf/training/: train.py
