[project]
name = "glaucoma-vf-ml"
version = "0.1.0"
description = "Deep learning for glaucoma visual field analysis and prediction"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "" }
]

dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "polars[excel]>=1.39.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.uv]
package = true

# CLI entry points
[project.scripts]
# train = "src.train:main"
# evaluate = "src.evaluate:main"

# Dev dependencies
[dependency-groups]
dev = []
