[project]
name = "glaucoma-vf-ml"
version = "0.1.0"
description = "Deep learning for glaucoma visual field analysis and prediction"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "" }
]

dependencies = [
    "gitpython>=3.1.46",
    "ipykernel>=7.2.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "patool>=4.0.4",
    "polars[excel]>=1.39.2",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.uv]
package = true

# CLI entry points
[project.scripts]
# train = "src.train:main"
# evaluate = "src.evaluate:main"

# Dev dependencies
[dependency-groups]
dev = []
